# guido-io

./: .gitignore  LICENSE.md  LISCENSE  Pipfile  README.md  generate_osm_pb2  osm.proto  pyproject.toml  tasks.py
app/: config.py  paths.py
app/commons/: cache.py  hashing.py  io.py  layer.py  progress_bar.py
app/commons/caching/: CacheHash.py  cache.py
app/notebooks/: debug_view.ipynb
app/osm/: generate_buffer  geofabrik.py  pbf_parser.py
app/osm/available_zones/: available_zones.py  collection.py  html_table.py
app/osm/geofabrik/: collection.py  geofabrik.py  html_table.py  regions.py
app/osm/pbf/: blob_meta.py  osm_pb2.py  pbf_file.py  pbf_header.py  pbf_primitive_block.py  pbf_utils.py  utils.py
app/overpass/: location.py  nodes.py  overpass.py  relations.py  tags.py  ways.py
app/routing/: algorithm.py  config.py  dijkstra.py  graph.py  graph_builder.py  node.py  path.py  priority_dict.py  routing.py  spatial_index.py
app/routing/algorithms/: algorithm.py  dijkstra.py
app/routing/feeds/: factory.py  feed.py  feed_type.py  osm_feed.py  overpass_feed.py
app/tour_optimizer/: bucket.py  poi.py  segment.py  tour.py  tour_optimizer.py
app/ui/: debug_view.py  leaflet_map.py
app/utils/: geoutils.py  maputils.py
lib/tasks/: generate.py
notebooks/: debug_view.ipynb
tests/: __init__.py  test_cache.py
