[tool.poetry]
name = "guido-io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
requests = "^2.27.1"
pandas = "^1.3.5"
scipy = "^1.7.3"
protobuf = "^3.19.1"
mlrose-hiive = "^2.2.4"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.6"
ipywidgets = "^7.6.5"
ipyleaflet = "^0.15.0"
scalene = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
